
09/01/2011 Changes

Parsing LiteralArrays and generating code for them.


04/01/2011 Changes

Parsing String Symbols.
Parsing Literal arrays. Still need to handled nested literal arrays.


03/01/2011 Changes

Parsing literals for True, False and Nil and resolving them to instances of the associated class.
Added a few placeholder Smalltalk Runtime sources.


02/01/2011 Changes

Ensured turning bootstrapped class into real class resolved the superclass chain, not just
current class. Including metaclass chain.
Added method comment chunk to TestMethod to ensure !! chunks were processed correctly.
Added parsing of Characters and conversion to Character instances.
Added paring of additional # symbols.


31/01/2011 Changes

Binding method into dictionary of owning object.


30/01/2011 Changes

Adding call to bind method into dictionary of owning object.


29/01/2011 Changes

Checked balancing of stack for <init> methods and normal methods.
Added additional 'applyToWith' signatures. We support 10 arguments.
Added additional tests to generator.


28/01/2011 Changes

Adding tests to Analyser to drive out generation of method classes.
Added concept of current "Context" to generator to support coming method generation.
Modifed generator to use contexts and push and pop them.
Methods are being generated. Now to add code to instantiate and put into an Objects
method dictionary.


27/01/2011 Changes

Implemented parsing of 'chunk' file format fragments.
Add node creation and analysis for chunks, including method patterns.


26/01/2011 Changes

Lookup existing class when making subclass (dont assume it is a new class).
Modified message send handling to reload classes that are bootstrapped from source
when they dont understand a message. After reload message is resent.


25/01/2011 Changes

Cleaned up Bootstrapper class and added more to the hierarchy of classes that gets
bootstrapped. These placeholder skeleton classes will be reloaded from source at a later
point.